codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• • Analyzing... (0s • esc to interrupt)                                        "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > Ask Codex to do anything                                                   │"
"╰──────────────────────────────────────────────────────────────────── browser ─╯"
"  gpt-5.5 default · /tmp/project                                                "
