codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 283
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working... (0s • esc to interrupt) · 1 background terminal running · /ps to v…"
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > Ask Codex to do anything                                                   │"
"╰──────────────────────────────────────────────────────────────────── browser ─╯"
"  gpt-5.5 default · /tmp/project                                                "
